<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnEntrant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="25dp"
        android:text="@string/entrant"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnOrganizer"
        app:layout_constraintEnd_toEndOf="@+id/btnOrganizer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnOrganizer"
        app:layout_constraintTop_toBottomOf="@+id/selectRole" />

    <Button
        android:id="@+id/btnOrganizer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:text="@string/organizer"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAdmin"
        app:layout_constraintEnd_toEndOf="@+id/btnAdmin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnAdmin"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrant" />

    <Button
        android:id="@+id/btnAdmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:padding="25dp"
        android:text="@string/admin"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOrganizer" />

    <TextView
        android:id="@+id/selectRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>